Usuario se registra como huesped y de ahí cambia al rol de anfitrión
